Fix vertical overflow on public pages.

--- a/frontend/scss/pages/_public.scss
+++ b/frontend/scss/pages/_public.scss
@@ -11,12 +11,10 @@ body.page-minimal {
 
   .public-page {
     height: 100dvh;
-    
     display: flex;
-    align-items: center;
-    justify-content: center;
 
     .card {
+      margin: auto;
       width: 500px;
 
       .card-body {
@@ -34,18 +32,8 @@ body.page-minimal {
     }
   }
 
-  &.login-content,
-  &.error-content {
-    .card {
-      .card-body {
-        padding: ($card-cap-padding-y * 2) ($card-cap-padding-y * 2);
-      }
-    }
-  }
-
   // Pulled from:
   // https://stackoverflow.com/questions/5474871/html-how-can-i-show-tooltip-only-when-ellipsis-is-activated
-
   .might-overflow {
     text-overflow: ellipsis;
     overflow : hidden;
